syntax="proto3";

package kazimir.cooltech.proto;

message SubscribeRequest {
  string client_address = 1;
  int32 client_port = 2;
  string client_name = 3;
}

message UnSubscribeRequest {
  string client_name = 1;
}

message SubscribeResponse {
  string status = 1;
}